apps/api-lab/deploy/prod/go-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  labels:
    app: api-lab
    component: go-api
    environment: prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - go-api.api-lab.prod.k3s.gillouche.homelab
  rules:
    - host: go-api.api-lab.prod.k3s.gillouche.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-api
                port:
                  number: 8080
