apps/api-lab/deploy/prod/python-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  labels:
    app: api-lab
    component: python-api
    environment: prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - python-api.api-lab.prod.k3s.gillouche.homelab
  rules:
    - host: python-api.api-lab.prod.k3s.gillouche.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-api
                port:
                  number: 8080
